# mongoDB

./: ._requirements.txt  .gitignore  README.md  doc.md  interfaceui.py  listmodel.py  main.py
Cpp/: CMakeLists.txt  interfaceui.cpp  interfaceui.h  listmodel.cpp  listmodel.h  main.cpp  mongomanager.cpp  mongomanager.h
Cpp/Test/: tst_testmongomanager.cpp
Cpp/ui/: InputItem.qml  InsertData.qml  ListItem.qml  Main.qml  RemoveData.qml  SearchData.qml  UpdateData.qml
back/: backmongo.py  testbackmongo.py
python/: listmodel.py  requirements.txt
python/back/: backmongo.py
python/ui/: RootItem.qml
ui/: ._RemoveData.qml  ._RootItem.qml  InputItem.qml  ListItem.qml  RemoveData.qml  RootItem.qml  SearchData.qml  UpdateData.qml  main.qml
